Updated rules for blackjack game in index.html

--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
                 <h2>Rules !!!</h2>
                 <ol>
                     <li>
-                        <!-- Rule 1 -->
+                        Player places a bet
                     </li>
                     <li>
-                        <!-- Rule 2 -->
+                        Dealer deals cards to players
                         <ul class="sublist">
                             <li>
-                                <!-- sub-rule 1 -->
+                                2 Player cards: both open
                             </li>
                             <li> 
-                                <!-- sub-rule 2 -->
+                                2 Dealer cards: one card closed and the other open
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <!-- Rule 3 -->
+                        Player decides how to play hand
                         <ul class="sublist">
                             <li> 
-                                <!-- sub-rule 1 -->
+                                A player can choose to “hit” and request an additional card from the deck.
                             </li>
                             <li> 
-                                <!-- sub-rule 2 -->
+                                A player can choose to “stand” and keep the original cards dealt.
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <!-- Rule 4 -->
+                        Dealer plays hand (shows his closed card)
                     </li>
                     <li>
-                        <!-- Rule 5 -->
+                        Payouts
                     </li>
                 </ol>
             </div>
